samples/_failures_safe/1761709711_7d9d6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6b33b8d.c: In function ‘main’:
./samples/SAFE/__tmp_b6b33b8d.c:161:5: error: expected expression at end of input
  161 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_b6b33b8d.c:161:5: error: expected declaration or statement at end of input
